force-app/main/default/objects/Prepaid_Service__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Prepaid Services</relationshipLabel>
    <relationshipName>Prepaid_Services</relationshipName>
    <type>Lookup</type>
</CustomField>