force-app/main/default/objects/Prepaid_Service__c/fields/Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Redeemed__c</fullName>
    <description>Roll up field to show how many of the quantity of prepaid services allowed have been redeemed</description>
    <label>Redeemed</label>
    <summaryForeignKey>Prepaid_Service_Redeemed__c.Prepaid_Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>