force-app/main/default/objects/Prepaid_Service__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Serial Number of the boat that the prepaid packages</description>
    <label>Serial Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GMBLASERP__Serial_Number__c.Product_Record_Type__c</field>
            <operation>equals</operation>
            <value>Boat</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Prepaid Services</relationshipLabel>
    <relationshipName>Prepaid_Services</relationshipName>
    <type>Lookup</type>
</CustomField>